--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,9 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	 <properties>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        </properties>
 
 	<build>
 		<plugins>
